add workshop section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       type="text/css"
       href="./assets/css/contact-card.less"
     />
+    <link
+      rel="stylesheet/less"
+      type="text/css"
+      href="./assets/css/workshop-cards.less"
+    />
     <link rel="stylesheet" href="./assets/css/bitsbybits.css" />
     <link rel="stylesheet" href="./assets/css/formal-events.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
@@ -1013,6 +1018,9 @@
           <span class="panel__nav panel__nav--left-top js-up js-left"
             >Sponsors</span
           >
+          <span class="panel__nav panel__nav--up js-up js-left"
+            >Sponsors</span
+          >
           <span class="panel__nav panel__nav--left js-left">Main</span>
           <span class="panel__nav panel__nav--left-down js-down js-left"
             >About</span
@@ -1020,8 +1028,102 @@
           <span class="panel__nav panel__nav--down js-down"
             >Informal Events</span
           >
-          <div class="panel-content">
+          <div id="workshops" class="panel-content">
             <h1>Workshops</h1>
+            <div class="workshop-cards">
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSSHR9sVrLkXNt8J81bQG4J6OWqvyGw72rfIQ2b7T5FLbsrYNLH"
+                      alt="workshop"
+                    />
+                  </div>
+                  <div class="flip-card-back">
+                    <h1>Equinox</h1>
+                    <p>7 February 2020</p>
+                    <p>9:00 PM</p>
+                  </div>
+                </div>
+              </div>
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSSHR9sVrLkXNt8J81bQG4J6OWqvyGw72rfIQ2b7T5FLbsrYNLH"
+                      alt="workshop"
+                    />
+                  </div>
+                  <div class="flip-card-back">
+                    <h1>Equinox</h1>
+                    <p>7 February 2020</p>
+                    <p>9:00 PM</p>
+                  </div>
+                </div>
+              </div>
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSSHR9sVrLkXNt8J81bQG4J6OWqvyGw72rfIQ2b7T5FLbsrYNLH"
+                      alt="workshop"
+                    />
+                  </div>
+                  <div class="flip-card-back">
+                    <h1>Equinox</h1>
+                    <p>7 February 2020</p>
+                    <p>9:00 PM</p>
+                  </div>
+                </div>
+              </div>
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSSHR9sVrLkXNt8J81bQG4J6OWqvyGw72rfIQ2b7T5FLbsrYNLH"
+                      alt="workshop"
+                    />
+                  </div>
+                  <div class="flip-card-back">
+                    <h1>Equinox</h1>
+                    <p>7 February 2020</p>
+                    <p>9:00 PM</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSSHR9sVrLkXNt8J81bQG4J6OWqvyGw72rfIQ2b7T5FLbsrYNLH"
+                      alt="workshop"
+                    />
+                  </div>
+                  <div class="flip-card-back">
+                    <h1>Equinox</h1>
+                    <p>7 February 2020</p>
+                    <p>9:00 PM</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSSHR9sVrLkXNt8J81bQG4J6OWqvyGw72rfIQ2b7T5FLbsrYNLH"
+                      alt="workshop"
+                    />
+                  </div>
+                  <div class="flip-card-back">
+                    <h1>Equinox</h1>
+                    <p>7 February 2020</p>
+                    <p>9:00 PM</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="panel" data-x-pos="0" data-y-pos="-1">
