--- a/index.html
+++ b/index.html
@@ -761,6 +761,16 @@
                 <img
                   src="https://hackofiesta.github.io/assets/images/axios.png"
                 />
+                <img
+                  src="https://hackofiesta.github.io/assets/images/sponsor-logo-3.png"
+                />
+                <img
+                  src="https://hackofiesta.github.io/assets/images/sponsor-logo-4.png"
+                />
+                <img
+                  src="https://static.balsamiq.cloud/1345/landing/images/2bcadf409f1d0ebd680e0f127db3aea4.svg"
+                  style="background-color: #df0000;padding: 10px;border-radius: 15px;"
+                />
               </div>
             </div>
             <div class="contact-form">
@@ -781,7 +791,11 @@
           <div class="panel-content" style="justify-content: center">
             <h1>Formal Events</h1>
             <div class="informals" id="informals">
-              <div class="container">
+              <div
+                class="container"
+                id="hackofiesta"
+                style="background: url(./assets/img/events/Hackofiesta.png );    background-color: black;background-size: cover;"
+              >
                 <div class="overlay">
                   <div class="items"></div>
                   <div class="items head">
