mobile home completed

--- a/mobile/about.html
+++ b/mobile/about.html
@@ -58,6 +58,7 @@
                 <li><a href="formal.html">Formal Events</a></li>
                 <li><a href="Informal.html">InFormal Events</a></li>
                 <li><a href="contact.html">Contacts</a></li>
+                <li><a href="team.html">Team</a></li>
               </ul>
             </nav>
           </div>
