--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script>
+      function hideScreen() {
+        if (window.innerWidth < 1334) {
+          if (window.location.origin == "http://blurry-x-face.me") {
+            location.replace(`${window.location.origin}/Equinox/mobile`);
+          } else {
+            location.replace(`${window.location.origin}/mobile`);
+          }
+        }
+      }
+      hideScreen();
+    </script>
     <link
       rel="stylesheet/less"
       type="text/css"
@@ -1280,17 +1292,5 @@
       </div>
     </div>
     <script src="./assets/js/page-transition.js"></script>
-    <script>
-      function hideScreen() {
-        if (window.innerWidth < 1334) {
-          if ((window.location.origin == "http://blurry-x-face.me")) {
-            location.replace(`${window.location.origin}/Equinox/mobile`);
-          } else {
-            location.replace(`${window.location.origin}/mobile`);
-          }
-        }
-      }
-      hideScreen();
-    </script>
   </body>
 </html>
