--- a/mobile/index.html
+++ b/mobile/index.html
@@ -18,8 +18,7 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="../assets/css/bitsbybits.css">
-    <link rel="stylesheet" href="../assets/css/bitsbybits.css.map">
+    <link rel="stylesheet" href="./css/bitsbybits.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="./css/cube.css">
   </head>
@@ -46,9 +45,9 @@
     
     <header class="site-navbar py-3" role="banner">
       <div class="container-fluid" style="padding: 0px">
-        <div class="row align-items-center">
+        <div class="row align-items-center" style="margin: 0px" >
           <div class="col-11 col-xl-2" style="padding: 0px;">
-            <div class="mb-0 header-img"><a href="index.html" class="text-white h2 mb-0"><img style="height: 80px;" src="https://github.com/blurry-x-face/Equinox/blob/master/assets/img/Equinox_logo/equinox_logo_white.png?raw=true"> </a></div>
+            <div class="mb-0 header-img"><a href="index.html" class="text-white h2 mb-0"><img style="height: 80px;margin-left: 25px;" src="../assets/img/Equinox_logo/equinox_logo_white.png"> </a></div>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
@@ -58,7 +57,7 @@
                 <li><a href="formal.html">Formal Events</a></li>
                 <li><a href="Informal.html">Informal Events</a></li>
                 <li><a href="contact.html">Contacts</a></li>
-                <!-- <li class="cta"><a href="buy-tickets.html">Register</a></li> -->
+                <li><a href="team.html">Team</a></li>
               </ul>
             </nav>
           </div>
@@ -68,7 +67,7 @@
       </div>
     </header>
 
-    <div class="site-section site-hero">
+    <div class="site-section site-hero" id="equinox">
       <!-- <div class="container">
         <div class="row align-items-center">
           <div class="col-md-10">
@@ -79,7 +78,8 @@
           </div>
         </div>
       </div> -->
-      <section class="background" id="equinox-svg-background">
+      <h5>Deciphering the origins</h5>
+      <section class="background" id="">
         <div class="hover">
           <svg
             class="illustration"
