--- a/mobile/formal.html
+++ b/mobile/formal.html
@@ -166,10 +166,11 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li class="active">
-                  <a href="formal.html">Formal Events</a></li>
+                <li class="active"><a href="formal.html">Formal Events</a></li>
                 <li><a href="informal.html">Informal Events</a></li>
                 <li><a href="contact.html">Contacts</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="sponsors.html">SPONSORS</a></li>
                 <!-- <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li> -->
               </ul>
             </nav>
