--- a/mobile/Informal.html
+++ b/mobile/Informal.html
@@ -20,98 +20,124 @@
   <link rel="stylesheet" href="./css/style.css">
   <style>
     .informals {
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-  overflow: auto;
-  height: 70%; }
-
-#informals .container {
-  width: 300px;
-  height: 400px;
-  margin: 20px;
-  background: url("../assets/img/COMING (1).png");
-  background-color: black;
-  background-size: cover;
-  cursor: pointer;
-  -webkit-box-shadow: 0 0 5px #000;
-  box-shadow: #f7d5b0 0px 0px 20px;
-  transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-  #informals .container:hover {
-    box-shadow: inset rgba(124, 199, 212, 0.33) 0px 10px 20px; }
-
-.overlay {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr 2fr 1fr;
-  background: rgba(77, 77, 77, 0.9);
-  color: #fef5df;
-  opacity: 0;
-  transition: all 0.5s;
-  font-family: "Playfair Display", serif; }
-
-.items {
-  padding-left: 20px;
-  letter-spacing: 3px; }
-
-.head {
-  font-size: 30px;
-  line-height: 40px;
-  transform: translateY(40px);
-  transition: all 0.7s; }
-  .head hr {
-    display: block;
-    width: 0;
-    border: none;
-    border-bottom: solid 2px #fef5df;
-    position: absolute;
-    bottom: 0;
-    left: 20px;
-    transition: all 0.5s; }
-
-.price {
-  font-size: 22px;
-  line-height: 10px;
-  font-weight: bold;
-  opacity: 0;
-  transform: translateY(40px);
-  transition: all 0.7s; }
-  .price .old {
-    text-decoration: line-through;
-    color: #b3b3b3; }
-
-.cart {
-  font-size: 12px;
-  opacity: 0;
-  letter-spacing: 1px;
-  font-family: "Lato", sans-serif;
-  transform: translateY(40px);
-  transition: all 0.7s; }
-  .cart i {
-    font-size: 16px; }
-  .cart span {
-    margin-left: 10px; }
-
-.container:hover .overlay {
-  opacity: 1; }
-  .container:hover .overlay .head {
-    transform: translateY(0px); }
-  .container:hover .overlay hr {
-    width: 75px;
-    transition-delay: 0.4s; }
-  .container:hover .overlay .price {
-    transform: translateY(0px);
-    transition-delay: 0.3s;
-    opacity: 1; }
-  .container:hover .overlay .cart {
-    transform: translateY(0px);
-    transition-delay: 0.6s;
-    opacity: 1; }
-
-/*# sourceMappingURL=formal-events.css.map */
-</style>
+      display: flex;
+      justify-content: center;
+      flex-flow: row wrap;
+      overflow: auto;
+      height: 70%;
+    }
+  
+    #informals .container {
+      width: 300px;
+      height: 400px;
+      margin: 20px;
+      background: url("../assets/img/COMING (1).png");
+      background-color: black;
+      background-size: cover;
+      cursor: pointer;
+      -webkit-box-shadow: 0 0 5px #000;
+      box-shadow: #f7d5b0 0px 0px 20px;
+      transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+  
+    #informals .container:hover {
+      box-shadow: inset rgba(124, 199, 212, 0.33) 0px 10px 20px;
+    }
+  
+    .overlay {
+      width: 100%;
+      height: 100%;
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 2fr 2fr 1fr;
+      background: rgba(77, 77, 77, 0.9);
+      color: #fef5df;
+      opacity: 0;
+      transition: all 0.5s;
+      font-family: "Playfair Display", serif;
+    }
+  
+    .items {
+      padding-left: 20px;
+      letter-spacing: 3px;
+    }
+  
+    .head {
+      font-size: 30px;
+      line-height: 40px;
+      transform: translateY(40px);
+      transition: all 0.7s;
+    }
+  
+    .head hr {
+      display: block;
+      width: 0;
+      border: none;
+      border-bottom: solid 2px #fef5df;
+      position: absolute;
+      bottom: 0;
+      left: 20px;
+      transition: all 0.5s;
+    }
+  
+    .price {
+      font-size: 22px;
+      line-height: 10px;
+      font-weight: bold;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.7s;
+    }
+  
+    .price .old {
+      text-decoration: line-through;
+      color: #b3b3b3;
+    }
+  
+    .cart {
+      font-size: 12px;
+      opacity: 0;
+      letter-spacing: 1px;
+      font-family: "Lato", sans-serif;
+      transform: translateY(40px);
+      transition: all 0.7s;
+    }
+  
+    .cart i {
+      font-size: 16px;
+    }
+  
+    .cart span {
+      margin-left: 10px;
+    }
+  
+    .container:hover .overlay {
+      opacity: 1;
+    }
+  
+    .container:hover .overlay .head {
+      transform: translateY(0px);
+    }
+  
+    .container:hover .overlay hr {
+      width: 75px;
+      transition-delay: 0.4s;
+    }
+  
+    .container:hover .overlay .price {
+      transform: translateY(0px);
+      transition-delay: 0.3s;
+      opacity: 1;
+    }
+  
+    .container:hover .overlay .cart {
+      transform: translateY(0px);
+      transition-delay: 0.6s;
+      opacity: 1;
+    }
+  
+    /*# sourceMappingURL=formal-events.css.map */
+  </style>
 </head>
 <body>
 
@@ -140,8 +166,10 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="formal.html">Formal Events</a></li>
-                <li><a href="Informal.html">Inormal Events</a></li>
+                <li class="active"><a href="Informal.html">Inormal Events</a></li>
                 <li><a href="contact.html">Contacts</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="sponsors.html">SPONSORS</a></li>
                 <!-- <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li> -->
               </ul>
             </nav>
@@ -164,107 +192,120 @@
     </div>
   </div>
 
-  <div class="site-section">
+  <div class="informals" id="informals">
     <div class="container">
-      <div class="row mb-5">
-        <div class="informals" id="informals">
-          <div class="container">
-            <div class="overlay">
-              <div class="items"></div>
-              <div class="items head">
-                <p>Equinox</p>
-                <hr>
-              </div>
-              <div class="items price">
-                <p class="new">Timings</p>
-              </div>
-              <div class="items cart">
-                <i class="fas fa-info" aria-hidden="true"></i>
-                <span>More information</span>
-              </div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="overlay">
-              <div class="items"></div>
-              <div class="items head">
-                <p>Equinox</p>
-                <hr>
-              </div>
-              <div class="items price">
-                <p class="new">Timings</p>
-              </div>
-              <div class="items cart">
-                <i class="fas fa-info" aria-hidden="true"></i>
-                <span>More information</span>
-              </div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="overlay">
-              <div class="items"></div>
-              <div class="items head">
-                <p>Equinox</p>
-                <hr>
-              </div>
-              <div class="items price">
-                <p class="new">Timings</p>
-              </div>
-              <div class="items cart">
-                <i class="fas fa-info" aria-hidden="true"></i>
-                <span>More information</span>
-              </div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="overlay">
-              <div class="items"></div>
-              <div class="items head">
-                <p>Equinox</p>
-                <hr>
-              </div>
-              <div class="items price">
-                <p class="new">Timings</p>
-              </div>
-              <div class="items cart">
-                <i class="fas fa-info" aria-hidden="true"></i>
-                <span>More information</span>
-              </div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="overlay">
-              <div class="items"></div>
-              <div class="items head">
-                <p>Equinox</p>
-                <hr>
-              </div>
-              <div class="items price">
-                <p class="new">Timings</p>
-              </div>
-              <div class="items cart">
-                <i class="fas fa-info" aria-hidden="true"></i>
-                <span>More information</span>
-              </div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="overlay">
-              <div class="items"></div>
-              <div class="items head">
-                <p>Equinox</p>
-                <hr>
-              </div>
-              <div class="items price">
-                <p class="new">Timings</p>
-              </div>
-              <div class="items cart">
-                <i class="fas fa-info" aria-hidden="true"></i>
-                <span>More information</span>
-              </div>
-            </div>
-          </div>
+      <div class="overlay">
+        <div class="items"></div>
+        <div class="items head">
+          <p>Equinox</p>
+          <hr>
         </div>
+        <div class="items price">
+          <p class="new">Timings</p>
+        </div>
+        <div class="items cart">
+          <i class="fas fa-info" aria-hidden="true"></i>
+          <span>More information</span>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="overlay">
+        <div class="items"></div>
+        <div class="items head">
+          <p>Equinox</p>
+          <hr>
+        </div>
+        <div class="items price">
+          <p class="new">Timings</p>
+        </div>
+        <div class="items cart">
+          <i class="fas fa-info" aria-hidden="true"></i>
+          <span>More information</span>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="overlay">
+        <div class="items"></div>
+        <div class="items head">
+          <p>Equinox</p>
+          <hr>
+        </div>
+        <div class="items price">
+          <p class="new">Timings</p>
+        </div>
+        <div class="items cart">
+          <i class="fas fa-info" aria-hidden="true"></i>
+          <span>More information</span>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="overlay">
+        <div class="items"></div>
+        <div class="items head">
+          <p>Equinox</p>
+          <hr>
+        </div>
+        <div class="items price">
+          <p class="new">Timings</p>
+        </div>
+        <div class="items cart">
+          <i class="fas fa-info" aria-hidden="true"></i>
+          <span>More information</span>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="overlay">
+        <div class="items"></div>
+        <div class="items head">
+          <p>Equinox</p>
+          <hr>
+        </div>
+        <div class="items price">
+          <p class="new">Timings</p>
+        </div>
+        <div class="items cart">
+          <i class="fas fa-info" aria-hidden="true"></i>
+          <span>More information</span>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="overlay">
+        <div class="items"></div>
+        <div class="items head">
+          <p>Equinox</p>
+          <hr>
+        </div>
+        <div class="items price">
+          <p class="new">Timings</p>
+        </div>
+        <div class="items cart">
+          <i class="fas fa-info" aria-hidden="true"></i>
+          <span>More information</span>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="overlay">
+        <div class="items"></div>
+        <div class="items head">
+          <p>Equinox</p>
+          <hr>
+        </div>
+        <div class="items price">
+          <p class="new">Timings</p>
+        </div>
+        <div class="items cart">
+          <i class="fas fa-info" aria-hidden="true"></i>
+          <span>More information</span>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <footer class="site-footer">
       <div class="container">
