--- a/mobile/contact.html
+++ b/mobile/contact.html
@@ -46,6 +46,8 @@
                   <li><a href="formal.html">Formal Events</a></li>
                   <li><a href="Informal.html">Informal Events</a></li>
                 <li class="active"><a href="contact.html">Contacts</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="sponsors.html">SPONSORS</a></li>
                 <!-- <li class="cta"><a href="buy-tickets.html">Buy Tickets</a></li> -->
               </ul>
             </nav>
