--- a/mobile/about.html
+++ b/mobile/about.html
@@ -40,15 +40,11 @@
         </ul> -->
       </div>
     </div>
-
     <header class="site-navbar py-3" role="banner">
-      <div class="container-fluid">
-        <div class="row align-items-center">
-          <div class="col-11 col-xl-2">
-            <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"><img
-                  style="height: 80px;width: 100px;margin-left: 45%;"
-                  src="https://github.com/blurry-x-face/Equinox/blob/master/assets/img/Equinox_logo/equinox_logo_white.png?raw=true"><span
-                  class="text-primary"></span> </a></h1>
+      <div class="container-fluid" style="padding: 0px">
+        <div class="row align-items-center" style="margin: 0px" >
+          <div class="col-11 col-xl-2" style="padding: 0px;">
+            <div class="mb-0 header-img"><a href="index.html" class="text-white h2 mb-0"><img style="height: 80px;margin-left: 25px;" src="../assets/img/Equinox_logo/equinox_logo_white.png"> </a></div>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
@@ -56,15 +52,16 @@
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="about.html">About Us</a></li>
                 <li><a href="formal.html">Formal Events</a></li>
-                <li><a href="Informal.html">InFormal Events</a></li>
+                <li><a href="Informal.html">Informal Events</a></li>
                 <li><a href="contact.html">Contacts</a></li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="sponsors.html">SPONSORS</a></li>
+                <li ><a href="sponsors.html">SPONSORS</a></li>
+                <!-- <li><a href="team.html">Team</a></li> -->
               </ul>
             </nav>
           </div>
-          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#"
-              class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
+          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
+          </div>
         </div>
       </div>
     </header>
@@ -168,8 +165,8 @@
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               Copyright ©
               <script>document.write(new Date().getFullYear());</script>2019 All rights reserved | This template is made
-              with <i class="icon-heart text-primary" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                target="_blank">Colorlib</a>
+              with <i class="icon-heart text-primary" aria-hidden="true"></i> by <a href="#!"
+                >WebTeam@Equinox</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
