--- a/mobile/team.html
+++ b/mobile/team.html
@@ -42,33 +42,30 @@
         </div>
 
         <header class="site-navbar py-3" role="banner">
-            <div class="container-fluid">
-                <div class="row align-items-center">
-                    <div class="col-11 col-xl-2">
-                        <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0"><img
-                                    style="height: 80px;width: 100px;margin-left: 45%;"
-                                    src="https://github.com/blurry-x-face/Equinox/blob/master/assets/img/Equinox_logo/equinox_logo_white.png?raw=true"><span
-                                    class="text-primary"></span> </a></h1>
-                    </div>
-                    <div class="col-12 col-md-10 d-none d-xl-block">
-                        <nav class="site-navigation position-relative text-right" role="navigation">
-                            <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="formal.html">Formal Events</a></li>
-                                <li><a href="Informal.html">InFormal Events</a></li>
-                                <li><a href="contact.html">Contacts</a></li>
-                                <li class="active"><a href="team.html">Team</a></li>
-                                <li><a href="sponsors.html">SPONSORS</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a
-                            href="#" class="site-menu-toggle js-menu-toggle text-white"><span
-                                class="icon-menu h3"></span></a></div>
+            <div class="container-fluid" style="padding: 0px">
+              <div class="row align-items-center" style="margin: 0px" >
+                <div class="col-11 col-xl-2" style="padding: 0px;">
+                  <div class="mb-0 header-img"><a href="index.html" class="text-white h2 mb-0"><img style="height: 80px;margin-left: 25px;" src="../assets/img/Equinox_logo/equinox_logo_white.png"> </a></div>
                 </div>
+                <div class="col-12 col-md-10 d-none d-xl-block">
+                  <nav class="site-navigation position-relative text-right" role="navigation">
+                    <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About Us</a></li>
+                      <li><a href="formal.html">Formal Events</a></li>
+                      <li><a href="Informal.html">Informal Events</a></li>
+                      <li><a href="contact.html">Contacts</a></li>
+                      <li class="active"><a href="team.html">Team</a></li>
+                      <li ><a href="sponsors.html">SPONSORS</a></li>
+                      <!-- <li><a href="team.html">Team</a></li> -->
+                    </ul>
+                  </nav>
+                </div>
+                <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
+                </div>
+              </div>
             </div>
-        </header>
+          </header>
     </div>
     <!-- teams -->
     <div class="site-section">
@@ -85,8 +82,8 @@
                     data-aos-delay="100">
                     <div class="testimony text-center">
                         <figure>
-                            <img src="https://axios.iiitl.ac.in/wings/webDevelopment/images/team/Divy.jpg" alt="Image"
-                                class="img-fluid">
+                            <img src="../assets/img/team/divy_khare.jpg" alt="Image"
+                                class="img-md-fluid" width="150px" height="150px">
                         </figure>
                         <blockquote>
                             <p class="author mb-0">Divy Khare</p>
@@ -99,8 +96,8 @@
                     data-aos-delay="200">
                     <div class="testimony text-center">
                         <figure>
-                            <img src="https://axios.iiitl.ac.in/wings/competitiveCoding/images/team/GOVIND.jpg"
-                                alt="Image" class="img-fluid">
+                            <img src="../assets/img/team/govinds.jpg" alt="Image"
+                                class="img-md-fluid" width="150px" height="150px">
                         </figure>
                         <blockquote>
                             <p class="author mb-0">Govind Dixit</p>
@@ -113,8 +110,8 @@
                     data-aos-delay="300">
                     <div class="testimony text-center">
                         <figure>
-                            <img src="https://axios.iiitl.ac.in/wings/webDevelopment/images/team/vaibhav.jpeg"
-                                alt="Image" class="img-fluid">
+                            <img src="../assets/img/team/vaibhav.jpg" alt="Image"
+                            class="img-md-fluid" width="150px" height="150px">
                         </figure>
                         <blockquote>
                             <p class="author mb-0">Vaibhav Gupta</p>
@@ -127,8 +124,8 @@
                     data-aos-delay="400">
                     <div class="testimony text-center">
                         <figure>
-                            <img src="https://axios.iiitl.ac.in/wings/machineLearning/images/team/saksham.jpg"
-                                alt="Image" class="img-fluid">
+                            <img src="../assets/img/team/varshney.jpeg" alt="Image"
+                            class="img-md-fluid" width="150px" height="150px">
                         </figure>
                         <blockquote>
                             <p class="author mb-0">Saksham Varshney</p>
@@ -182,22 +179,6 @@
                     </p>
                 </div>
             </div>
-            <div class="row">
-
-                <div class="col-md-12 text-center">
-                    <div class="border-top pt-5">
-                        <p>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright ©
-                            <script>document.write(new Date().getFullYear());</script>2019 All rights reserved | This
-                            template is made
-                            with <i class="icon-heart text-primary" aria-hidden="true"></i> by <a
-                                href="https://colorlib.com" target="_blank">Colorlib</a>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
-                    </div>
-                </div>
-            </div>
         </div>
     </footer>
 
@@ -219,7 +200,6 @@
 
     <!-- Code injected by live-server -->
     <script type="text/javascript">
-        // <![CDATA[  <-- For SVG support
         if ('WebSocket' in window) {
             (function () {
                 function refreshCSS() {
@@ -253,7 +233,6 @@
         else {
             console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
         }
-	// ]]>
     </script>
 </body>
 
